--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1502,24 +1502,11 @@ span.is-active {
     height: 100%;
     left: 0;
     z-index: -1;
-/*     -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    background: white none repeat scroll 0 0;
-    -webkit-transform: skew(-40deg);
-    transform: skew(-40deg); */
-}
-/* .projectFilter li a:hover {
-    color: white !important; /* This changes the text color on hover */
-} */
-/* .projectFilter li a:hover {
-    background: #38d933 !important;
-    color: #fff !important;
-    border-radius: 50px;
-    padding: 15px !important;
-} */
 
-.projectFilter li a.current:hover{
-	 background: #38d933 !important;
+}
+ .projectFilter li a:hover,
+.projectFilter li a.current:hover {
+    background: #38d933 !important;
     color: #fff !important;
     border-radius: 50px;
     padding: 15px !important;
